Fixed alignment on links and lists
Added padding and margins to areas to make them match the mockup

--- a/css/main.css
+++ b/css/main.css
@@ -115,6 +115,8 @@ dd {
   font-family: 'Nunito', sans-serif;
   list-style-type: none; /* decimal, circle, lower-alpha, lower-roman, upper-alpha, uper-roman, square, disc, none */
   padding: 0;
+  text-align: left;
+  margin: 0em 0em 1em 0em;
 }
 
 dt {
@@ -139,6 +141,7 @@ a:hover {
   list-style-type: circle;
   display: block;
   margin:0.5em 2em 4em 0.5em;
+  padding: 0em 0em 1em 2em;
 }
 
 .quote {
